# inferswitch

./: .gitignore  README.md  inferswitch.config.example.json  main.py  pyproject.toml  requirements.txt  setup.py
benchmarks/: benchmark_all_approaches.py  benchmark_expertise_selection.py  benchmark_mlx_classifier.py  benchmark_mlx_models.py  benchmark_mlx_models_comparison.json  benchmark_pure_model.py  benchmark_results.json  quick_comparison.py  visualize_benchmark_results.py  visualize_expertise_benchmark_results.py
examples/: curl_examples.sh  custom_experts_config.json  domain_experts_config.json  expertise_routing_config.json  model_fallback_config.json  new_routing_config.json
inferswitch/: __init__.py  config.py  expertise_classifier.py  main.py  mlx_model.py
tests/: test_api.py  test_api_truncation.py  test_cache.py  test_cache_control.py  test_chat_template.py  test_chat_template_api.py  test_complex_content.py  test_compression.py  test_console_progress.py  test_context_window_detection.py  test_count_tokens.py  test_custom_experts.py  test_difficulty_rating.py  test_difficulty_routing.py  test_direct_classifier.py  test_example_request.py  test_expertise_classifier.py  test_expertise_routing.py  test_force_difficulty_routing.py  test_lm_studio.py  test_lm_studio_backend.py  test_mlx_backend.py  test_mlx_config.py  test_mlx_direct_benchmark.py  test_mlx_model.py  test_mlx_non_thinking.py  test_mlx_skip_optimization.py  test_model_availability.py  test_optimized_mlx.py  test_progress_logging.py  test_real_client.py  test_remove_oldest.py  test_streaming.py  (+7 more)
(+30 files in other folders)
