[project]
name = "inferswitch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "mlx>=0.29.3",
    "mlx-lm>=0.28.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
